# aoc2024

./: algo.ml  algo.mli  day01.ml  day01_input.dots  day01_input.hex  day01_p1.txt  day01_p2.txt  day02.ml  day02_input.dots  day02_input.hex  day03.ml  day03_input.dots  day03_input.hex  day04.ml  day04_input.dots  day04_input.hex  day05.ml  day05_input.dots  day05_input.hex  day06.ml  day06_input.dots  day06_input.hex  day07.ml  day07_input.dots  day07_input.hex  day07_p1.txt  day07_p2.txt  day08.ml  day08_input.dots  day08_input.hex  day09.ml  day09_input.dots  day09_input.hex  day09_p1.txt  day09_p2.txt  day10.ml  day10_input.dots  day10_input.hex  day11.ml  day11_input.dots  (+52 more)
input/: dune  input.ml
